# Web_chat_room

./: CMakeLists.txt  Makefile  README.md  complete_log.txt  main.cpp
include/: chat_handler.h  client.h  server.h
src/: chat_handler.cpp  client.cpp  server.cpp
static/css/: main.css
static/js/: auth.js  chat.js  room.js
templates/: chat.html  index.html
